fix: Improve styling on mobile

--- a/packages/webauthn-demo-client/src/Authentication.module.css
+++ b/packages/webauthn-demo-client/src/Authentication.module.css
@@ -42,13 +42,17 @@ body {
     width: 100%;
     height: 50vh;
   }
+
+  .container {
+    padding: 30px !important;
+  }
 }
 
 .container {
   font-family: "Tahoma", sans-serif;
   text-align: center;
 
-  margin: 50px 0;
+  margin: 50px 25px;
   background-color: white;
   border-radius: 10px;
   padding: 30px 50px;
@@ -80,7 +84,7 @@ body {
   margin-bottom: 50px;
 }
 
-.pageLeft input[type="submit"] {
+.pageLeft button {
   display: block;
   margin: 10px auto;
   padding: 15px;
@@ -106,6 +110,8 @@ body {
   border-radius: 10px;
 
   max-width: 400px;
+
+  margin: 0 25px;
 }
 
 .restrictedContent {
